2011-11-09 Roman
- UI.Vision: Falgs store for developed widgets is changed to uint8_t type.
    Child attributes process into change rule "attr" is added.
    Rule's name process is added for group attributes change into one rule "attr".
- UI.Vision: Context record for widget atributes' value is moved to separated function and used also
    for record context after active atribute value change.


2011-11-08 Roman
- DAQ.JavaLikeCalc: Contoller's values context length for save to DB is rise from 50 to 10000.
- FIX:UI.VCAEngine: Pages with "pgNoOpenProc" flag set enabling on start session is fixed.
- FIX:UI.Vision: Copy first level widgets of a library is fixed.


2011-11-07 Roman
- !!:UI.Vision: Visual item add changes record is made optional by 'chNoWr' argument for prevented uncontrolled record.
    Visual item changes record is added for copy-paste and delete container's child widgets.
    Crash at UnDo and ReDo for some cases is prevented.
- FIX:UI.Vision: Pointer cursor-hand lost for selected widgets after copy at some cases is prevented.


2011-11-04 Roman
- DAQ: User API functions enable() and start() is added to controller object.
- Archive: User API functions status(), end() and begin() is added to messages archivator object.
- FIX:DB.*: Fix ALL SQL DB modules to append first key field to SELECT request of dataGet() function at case no one other fields for select present.


2011-11-03 Roman
- SYS, DB: System periodic call function perSYSCall() to subsystem's and its modules objects is added.
    TDBS::closeOldTables() realisation is moved to perSYSCall().
- UI.VCAEngine: Periodic check for not use session is added into function perSYSCall() for 30 minutes timeout.
- FIX:UI.VCAEngine: Copy properties for DirectRead attributes on widget copy is fixed.
- FIX:UI.WebVision: Scale is fixed for included and other, no master, pages for prevent using self master static scale.
    Pages include to Box-container widget is fixed to scroll processing.


2011-11-02 Roman