@@ -180,7 +180,7 @@ class TSYS : public TCntrNode
 
 	//> Tasks control
 	void taskCreate( const string &path, int priority, void *(*start_routine)(void *), void *arg, int wtm = 5, pthread_attr_t *pAttr = NULL );
-	void taskDestroy( const string &path, bool *endrunCntr = NULL, int wtm = 5 );
+	void taskDestroy( const string &path, bool *endrunCntr = NULL, int wtm = 5, bool noSignal = false );
 
 	//> Sleep task for period grid <per> on ns or to cron time.
 	static void taskSleep( int64_t per, time_t cron = 0 );
